[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "sartoriusb"
dist-name = "SartoriUSB"
author = "Holger Frey"
author-email = "frey@imtek.de"
home-page = "https://github.com/holgi/sartoriusb"
description-file = "README.md"
license = "Beerware"

# see https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Freely Distributable",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
]
requires = [
    "pyserial >= 3.4",
]
requires-python = ">=3.7"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=4.0.0",
    "pytest-cov",
    "pytest-mock",
]
dev = [
    "black",
    "flake8",
    "flake8-comprehensions",
    "isort",
    "keyring",
    "pre-commit",
]

[tool.black]
line-length = 79
py37 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
line_length=79
multi_line_output=3
length_sort="True"
include_trailing_comma="True"
